--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/commonjs/main.js",
   "types": "./dist/commonjs/main.d.ts",
   "dependencies": {
+    "@stencil/core": "^3.2.1",
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
