--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "./dist/commonjs/main.js",
   "types": "./dist/commonjs/main.d.ts",
   "dependencies": {
-    "@stencil/core": "^3.2.1",
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
@@ -20,7 +19,8 @@
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "ts-node": "^8",
-    "typescript": "^4"
+    "typescript": "^5",
+    "@stencil/core": "^3.2.2"
   },
   "scripts": {
     "browserbundle": "./node_modules/browserify/bin/cmd.js ./dist/commonjs/QuillDeltaToHtmlConverter.js -o ./dist/browser/QuillDeltaToHtmlConverter.bundle.js -s QuillDeltaToHtmlConverter ",
